add_subdirectory(360SafeDemo)
add_subdirectory(GameDemo)
add_subdirectory(ListDemo)
add_subdirectory(QQDemo)
add_subdirectory(RichListDemo)

if (CEF_ROOT_PATH)
    set(CEF_ROOT "${CEF_ROOT_PATH}")
    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CEF_ROOT}/cmake")
    find_package(CEF REQUIRED)
    PRINT_CEF_CONFIG()
    add_subdirectory(${CEF_LIBCEF_DLL_WRAPPER_PATH} libcef_dll_wrapper)
    add_subdirectory(WebDemo)
endif()
